added some css and content

--- a/index.html
+++ b/index.html
@@ -4,23 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin-Recipes</title>
 </head>
 <body>
-    <H1>Recipes</H1>
-    <p>Hi, I am working on The Odin Project and this is one of the assignmets
-        to make a webpage of recipes.  These are some recipes that I would like to try. 
-        I am not sure if I need to credit the people that made the page so I will leave 
-        the link to the original pages and the writters name's that I see on the pages.
-        One I would like to try and two that I have made that are from the same site.</p>
-    <h2>My Recipe List</h2>
-    <ul>
-       <li><a href="recipes/No-rice-chicken.html">No Rice, Chicken Fried Rice</a></li>
-       <!--https://www.allrecipes.com/recipe/237545/no-rice-chicken-fried-rice/--> 
-       <li><a href="recipes/Mushroom-chicken-piccata.html">Mushroom Chicken Piccata</a></li>
-       <!--https://www.allrecipes.com/recipe/15134/mushroom-chicken-piccata/-->
-       <li><a href="recipes/5-ingredient-cookies.html">5-ingredient-peanut-butter-chocolate-cookies</a></li>
-        <!--https://www.allrecipes.com/recipe/260369/5-ingredient-peanut-butter-chocolate-cookies/-->
-    </ul>
+    <div class="main">
+        <div class="main-top">
+            <H1>Recipes</H1>
+            <p>Hi, I am working on The Odin Project and this is one of the assignmets
+                to make a webpage of recipes.  These are some recipes that I have tried from allrecipes.com 
+                and enjoyed. I am not sure if I need to credit the people that made the page so I will leave 
+                the link to the original pages.</p>
+        </div>
+        <div class="main-bottom">
+            <h3>My Recipe List</h2>
+            <ul>
+                <li><a href="recipes/No-rice-chicken.html">No Rice, Chicken Fried Rice</a></li>
+                <!--https://www.allrecipes.com/recipe/237545/no-rice-chicken-fried-rice/--> 
+                <li><a href="recipes/Mushroom-chicken-piccata.html">Mushroom Chicken Piccata</a></li>
+                <!--https://www.allrecipes.com/recipe/15134/mushroom-chicken-piccata/-->
+                <li><a href="recipes/5-ingredient-cookies.html">5 ingredient peanutbutter chocolate cookies</a></li>
+                <!--https://www.allrecipes.com/recipe/260369/5-ingredient-peanut-butter-chocolate-cookies/-->
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
