--- a/pages/Mushroom-chicken-piccata.html
+++ b/pages/Mushroom-chicken-piccata.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Mushroom Chicken Piccata</title>
 </head>
 <body>
+    <img src="../images/mushroom-piccata.jpeg" width="300px">
+    <div class="main">
+        <div class="main-top">
+            <p><h1>Mushroom Piccata</h1></p>
+            <p>This is a tasty chicken dish.  The flavour of the mushrooms, with the lemon adds
+                excellence to the sauce.  One of my favorite stay at home movie meals on a cozy evening.
+            </p>
+        </div>
+        <div class="main-bottom">
+            <ul>
+                <li><a href="#">Original link </a></li>
+                <li><a href="../index.html">Home</a></li>
+            </ul> 
+        </div>
+    </div>
 </body>
 </html>
