--- a/pages/5-ingredient-cookies.html
+++ b/pages/5-ingredient-cookies.html
@@ -4,10 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>5-Ingredient Peanut Butter Chocolate Cookies</title>
 </head>
 <body>
-<h1>5-Ingredient Peanut Butter Chocolate Cookies</h1>
-
+    <img src="../images/5-ingredient-cookies.jpeg" width="300px">
+    <div class="main">
+        <div class="main-top">
+            <p><h1>5-Ingredient Peanut Butter Chocolate Cookies</h1></p>
+            <p>These cookies are simple, yet effective, at containing that urge for a
+                peanuty chocolate taste.  It is an easy and quick recipe that leaves very little
+                clean up.  It is an excellent idea for a free afternoon.
+            </p>
+        </div>
+        <div class="main-bottom">
+            <ul>
+                <li><a href="#">Original link </a></li>
+                <li><a href="../index.html">Home</a></li>
+            </ul> 
+        </div>
+    </div>
 </body>
 </html>
