fixed some links and added content

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         <div class="main-bottom">
             <h3>My Recipe List</h2>
             <ul>
-                <li><a href="recipes/No-rice-chicken.html">No Rice, Chicken Fried Rice</a></li>
+                <li><a href="pages/No-rice-chicken.html">No Rice, Chicken Fried Rice</a></li>
                 <!--https://www.allrecipes.com/recipe/237545/no-rice-chicken-fried-rice/--> 
-                <li><a href="recipes/Mushroom-chicken-piccata.html">Mushroom Chicken Piccata</a></li>
+                <li><a href="pages/Mushroom-chicken-piccata.html">Mushroom Chicken Piccata</a></li>
                 <!--https://www.allrecipes.com/recipe/15134/mushroom-chicken-piccata/-->
-                <li><a href="recipes/5-ingredient-cookies.html">5 ingredient peanutbutter chocolate cookies</a></li>
+                <li><a href="pages/5-ingredient-cookies.html">5 ingredient peanutbutter chocolate cookies</a></li>
                 <!--https://www.allrecipes.com/recipe/260369/5-ingredient-peanut-butter-chocolate-cookies/-->
             </ul>
         </div>
