--- a/pages/No-rice-chicken.html
+++ b/pages/No-rice-chicken.html
@@ -8,8 +8,9 @@
     <title>No Rice, Chicken Fried Rice</title>
 </head>
 <body>
-    <img src="../images/no-rice.jpeg" width="300px">
+    
     <div class="main">
+        <img src="../images/no-rice.jpeg" width="300px">
         <div class="main-top">
             <p><h1>No Rice, Chicken Fried Rice</h1></p>
          
@@ -24,6 +25,35 @@
                 <li><a href="#">Original link </a></li>
                 <li><a href="../index.html">Home</a></li>
             </ul> 
+        </div>
+        <div class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>6 eggs</li>
+                <li>1 tablespoon milk, or as needed</li>
+                <li>2 tablespoons vegetable oil, or as needed, divided</li>
+                <li>1 pound chicken breasts, cut into cubes</li>
+                <li>6 slices bacon, cut into small squares, or more to taste</li>
+                <li>1 (10 ounce) package frozen peas and carrots, thawed</li>
+                <li>1 head cauliflower, shredded</li>
+                <li>1 teaspoon soy sauce, or more to taste</li>
+            </ul>
+        </div>
+        <div class="instructions">
+            <h2>Instructions</h2>
+            <ol>
+                <li>Beat eggs and milk together in a bowl.</li>
+                <li>Heat 1 tablespoon oil in a skillet over medium heat; cook 
+                    and stir egg mixture until scrambled and cooked through, about 5 
+                    minutes. Remove skillet from heat.</li>
+                <li>Heat 1 tablespoon oil in a wok or large, deep skillet over 
+                    medium heat; cook and stir chicken until almost cooked through, 
+                    5 to 10 minutes. Add bacon; cook and stir until bacon is browned 
+                    and chicken is no longer pink in the center, 5 to 10 minutes more.</li>
+                <li>Mix peas and carrots into chicken mixture; cook and stir until warmed, 
+                    about 5 minutes. Add cauliflower, scrambled eggs, and soy sauce; cook and 
+                    stir until cauliflower is tender, about 10 minutes more.</li>
+            </ol>
         </div>
     </div>
 </body>
