--- a/pages/Mushroom-chicken-piccata.html
+++ b/pages/Mushroom-chicken-piccata.html
@@ -8,8 +8,8 @@
     <title>Mushroom Chicken Piccata</title>
 </head>
 <body>
-    <img src="../images/mushroom-piccata.jpeg" width="300px">
     <div class="main">
+        <img src="../images/mushroom-piccata.jpeg" width="300px">
         <div class="main-top">
             <p><h1>Mushroom Piccata</h1></p>
             <p>This is a tasty chicken dish.  The flavour of the mushrooms, with the lemon adds
@@ -21,6 +21,42 @@
                 <li><a href="#">Original link </a></li>
                 <li><a href="../index.html">Home</a></li>
             </ul> 
+        </div>
+        <div class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+                <li>½ cup all-purpose flour</li>
+                <li>1 teaspoon salt</li>
+                <li>½ teaspoon paprika</li>
+                <li>1 egg</li>
+                <li>2 tablespoons milk</li>
+                <li>6 skinless, boneless chicken breast halves</li>
+                <li>4 tablespoons butter</li>
+                <li>½ pound fresh mushrooms, sliced</li>
+                <li>¼ cup chopped onion</li>
+                <li>1 cup chicken broth</li>
+                <li>½ cup white wine</li>
+                <li>2 tablespoons lemon juice</li>
+                <li>1 tablespoon cornstarch</li>
+                <li>1 tablespoon chopped fresh parsley, for garnish</li>
+            </ul>
+        </div>
+        <div class="instructions">
+            <h2>Instructions</h2>
+            <ol>
+                <li>In a shallow dish or bowl, mix together flour, salt 
+                    and paprika. In a separate dish or bowl, mix together egg 
+                    and milk. Dip chicken pieces in egg mixture, then in seasoned 
+                    flour.</li>
+                <li>In a large skillet, heat butter or margarine over medium-high heat. 
+                    Saute chicken pieces until golden brown. Add mushrooms and onion and 
+                    saute for 3 to 5 minutes.</li>
+                <li>In a medium bowl combine the broth, wine, lemon juice and cornstarch. 
+                    Mix together and pour mixture over chicken and mushrooms. Reduce heat 
+                    to medium low and let chicken mixture simmer for 25 minutes or until 
+                    chicken is cooked through and juices run clear. Sprinkle with parsley 
+                    and serve.</li>
+            </ol>
         </div>
     </div>
 </body>
