--- a/index.html
+++ b/index.html
@@ -9,24 +9,26 @@
 </head>
 <body>
     <div class="main">
-        <div class="main-top">
-            <H1>Recipes</H1>
-            <p>Hi, I am working on The Odin Project and this is one of the assignmets
-                to make a webpage of recipes.  These are some recipes that I have tried from allrecipes.com 
-                and enjoyed. I am not sure if I need to credit the people that made the page so I will leave 
-                the link to the original pages.</p>
+        <div class="index-centered">
+            <div class="write-up">
+                <H1>Recipes</H1>
+                <p>Hi, I am working on The Odin Project and this is one of the assignmets
+                    to make a webpage of recipes.  These are some recipes that I have tried from allrecipes.com 
+                    and enjoyed.</p>
+            </div>
+            <div class="recipe-list">
+                <!--<h1>My Recipe List</h2>-->
+                <ul>
+                    <li><a href="pages/No-rice-chicken.html">No Rice, Chicken Fried Rice</a></li>
+                    <!--https://www.allrecipes.com/recipe/237545/no-rice-chicken-fried-rice/--> 
+                    <li><a href="pages/Mushroom-chicken-piccata.html">Mushroom Chicken Piccata</a></li>
+                    <!--https://www.allrecipes.com/recipe/15134/mushroom-chicken-piccata/-->
+                    <li><a href="pages/5-ingredient-cookies.html">5 ingredient peanutbutter chocolate cookies</a></li>
+                    <!--https://www.allrecipes.com/recipe/260369/5-ingredient-peanut-butter-chocolate-cookies/-->
+                </ul>
+            </div>
         </div>
-        <div class="main-bottom">
-            <h3>My Recipe List</h2>
-            <ul>
-                <li><a href="pages/No-rice-chicken.html">No Rice, Chicken Fried Rice</a></li>
-                <!--https://www.allrecipes.com/recipe/237545/no-rice-chicken-fried-rice/--> 
-                <li><a href="pages/Mushroom-chicken-piccata.html">Mushroom Chicken Piccata</a></li>
-                <!--https://www.allrecipes.com/recipe/15134/mushroom-chicken-piccata/-->
-                <li><a href="pages/5-ingredient-cookies.html">5 ingredient peanutbutter chocolate cookies</a></li>
-                <!--https://www.allrecipes.com/recipe/260369/5-ingredient-peanut-butter-chocolate-cookies/-->
-            </ul>
-        </div>
+        
     </div>
 </body>
 </html>
