--- a/pages/5-ingredient-cookies.html
+++ b/pages/5-ingredient-cookies.html
@@ -9,45 +9,52 @@
 </head>
 <body>
     <div class="main">
-        <img src="../images/5-ingredient-cookies.jpeg" width="300px">
-        <div class="main-top">
-            <p><h1>5-Ingredient Peanut Butter Chocolate Cookies</h1></p>
-            <p>These cookies are simple, yet effective, at containing that urge for a
-                peanuty chocolate taste.  It is an easy and quick recipe that leaves very little
-                clean up.  It is an excellent idea for a free afternoon.
-            </p>
+
+        <div class="left">
+            <div class="image">
+                <img src="../images/5-ingredient-cookies.jpeg" width="300px" height="300px">
+            </div>
+            <div class="write-up">
+                <p><h1>5-Ingredient Peanut Butter Chocolate Cookies</h1></p>
+                <p>These cookies are simple, yet effective, at containing that urge for a
+                    peanutty chocolate taste.  It is an easy and quick recipe that leaves very little
+                    clean up.  It is an excellent idea for a free afternoon.
+                </p>
+            </div>
         </div>
-        <div class="main-bottom">
-            <ul>
-                <li><a href="#">Original link </a></li>
-                <li><a href="../index.html">Home</a></li>
-            </ul> 
+
+        <div class="right">
+            <div class="ingredients">
+                <h2>Ingredients</h2>
+                <ul>
+                    <li>1 cup creamy peanut butter</li>
+                    <li>1 egg</li>
+                    <li>¼ cup stevia</li>
+                    <li>2 tablespoons unsweetened cocoa powder</li>
+                    <li>1 tablespoon vanilla extract</li>
+                </ul>
+            </div>
+            <div class="instructions">
+                <ol>
+                    <li>Preheat oven to 350 degrees F (175 degrees C).</li>
+                    <li>Combine peanut butter, egg, stevia sweetener, cocoa 
+                        powder, and vanilla extract together with a mixer or 
+                        food processor. Roll dough into 1-inch balls. Place 1 
+                        to 2 inches apart on an ungreased baking sheet. Flatten 
+                        balls with a fork.</li>
+                    <li>Bake in the preheated oven until edges are set, about 10 
+                        minutes. Let cool on the baking sheet for 10 minutes.</li>
+                    <li>Line a tray with waxed paper. Transfer cookies to tray until 
+                        cooled to room temperature, about 15 minutes, then refrigerate 
+                        for 30 minutes</li>
+                </ol>
+            </div>
         </div>
-        <div class="ingredients">
-            <h2>Ingredients</h2>
-            <ul>
-                <li>1 cup creamy peanut butter</li>
-                <li>1 egg</li>
-                <li>¼ cup stevia</li>
-                <li>2 tablespoons unsweetened cocoa powder</li>
-                <li>1 tablespoon vanilla extract</li>
-            </ul>
+
+        <div class="back">
+            <a href="../index.html">Back</a>
         </div>
-        <div class="instructions">
-            <ol>
-                <li>Preheat oven to 350 degrees F (175 degrees C).</li>
-                <li>Combine peanut butter, egg, stevia sweetener, cocoa 
-                    powder, and vanilla extract together with a mixer or 
-                    food processor. Roll dough into 1-inch balls. Place 1 
-                    to 2 inches apart on an ungreased baking sheet. Flatten 
-                    balls with a fork.</li>
-                <li>Bake in the preheated oven until edges are set, about 10 
-                    minutes. Let cool on the baking sheet for 10 minutes.</li>
-                <li>Line a tray with waxed paper. Transfer cookies to tray until 
-                    cooled to room temperature, about 15 minutes, then refrigerate 
-                    for 30 minutes</li>
-            </ol>
-        </div>
+
     </div>
 </body>
 </html>
